// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializer parses a game with RANDOM, loops, and debug statements 1`] = `
{
  "brackets": {
    "bracket-0": {
      "_sourceOffset": 202,
      "debugFlag": null,
      "direction": "UP",
      "neighbors": [
        "neighbor-0",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-1": {
      "_sourceOffset": 217,
      "debugFlag": "DEBUGGER",
      "direction": "UP",
      "neighbors": [
        "neighbor-1",
      ],
      "type": "BRACKET_SIMPLE",
    },
  },
  "collisionLayers": {
    "collision-0": {
      "_sourceOffset": 136,
    },
    "collision-1": {
      "_sourceOffset": 147,
    },
    "collision-2": {
      "_sourceOffset": 0,
    },
  },
  "colors": {
    "#000000": "#000000",
    "#f7e26b": "#f7e26b",
  },
  "commands": {},
  "levels": [
    {
      "_sourceOffset": 271,
      "message": "hello",
      "type": "LEVEL_MESSAGE",
    },
    {
      "_sourceOffset": 286,
      "cells": [
        [
          "tile-1",
          "tile-2",
        ],
      ],
      "type": "LEVEL_MAP",
    },
  ],
  "metadata": {
    "againInterval": null,
    "author": null,
    "backgroundColor": null,
    "colorPalette": null,
    "flickscreen": null,
    "homepage": null,
    "keyRepeatInterval": null,
    "noAction": false,
    "noRepeatAction": false,
    "noRestart": false,
    "noUndo": false,
    "realtimeInterval": null,
    "requirePlayerMovement": false,
    "runRulesOnLevelStart": null,
    "textColor": null,
    "throttleMovement": false,
    "verboseLogging": false,
    "youtube": null,
    "zoomscreen": null,
  },
  "neighbors": {
    "neighbor-0": {
      "_sourceOffset": 203,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-0",
      ],
    },
    "neighbor-1": {
      "_sourceOffset": 219,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-1",
      ],
    },
  },
  "ruleDefinitions": {
    "rule-0": {
      "_sourceOffset": 181,
      "actions": [
        "bracket-1",
      ],
      "commands": [],
      "conditions": [
        "bracket-0",
      ],
      "debugFlag": undefined,
      "directions": [],
      "isLate": true,
      "isRandom": null,
      "isRigid": true,
      "type": "RULE_SIMPLE",
    },
    "rule-1": {
      "_sourceOffset": 181,
      "debugFlag": null,
      "isRandom": true,
      "rules": [
        "rule-0",
      ],
      "type": "RULE_GROUP",
    },
    "rule-2": {
      "_sourceOffset": undefined,
      "debugFlag": null,
      "isRandom": false,
      "rules": [
        "rule-1",
      ],
      "type": "RULE_GROUP",
    },
  },
  "rules": [
    "rule-2",
  ],
  "sounds": {},
  "sprites": {
    "sprite-0": {
      "_sourceOffset": 33,
      "collisionLayer": "collision-0",
      "name": "background",
      "pixels": [
        [
          "#000000",
        ],
      ],
    },
    "sprite-1": {
      "_sourceOffset": 53,
      "collisionLayer": "collision-1",
      "name": "player",
      "pixels": [
        [
          "#f7e26b",
        ],
      ],
    },
  },
  "tiles": {
    "tile-0": {
      "_sourceOffset": 53,
      "collisionLayer": "collision-1",
      "name": "player",
      "sprite": "sprite-1",
      "type": "SPRITE",
    },
    "tile-1": {
      "_sourceOffset": 84,
      "collisionLayers": [
        "collision-1",
        "collision-0",
      ],
      "name": "P",
      "sprites": [
        "sprite-1",
        "sprite-0",
      ],
      "type": "AND",
    },
    "tile-2": {
      "_sourceOffset": 33,
      "collisionLayer": "collision-0",
      "name": "background",
      "sprite": "sprite-0",
      "type": "SPRITE",
    },
  },
  "tilesWithModifiers": {
    "twm-0": {
      "_sourceOffset": 204,
      "debugFlag": undefined,
      "direction": "UP",
      "isNegated": false,
      "isRandom": false,
      "tile": "tile-0",
    },
    "twm-1": {
      "_sourceOffset": 220,
      "debugFlag": undefined,
      "direction": null,
      "isNegated": false,
      "isRandom": true,
      "tile": "tile-0",
    },
  },
  "title": "Test Game",
  "version": 1,
  "winConditions": [],
}
`;

exports[`serializer parses a simple game 1`] = `
{
  "brackets": {
    "bracket-0": {
      "_sourceOffset": 129,
      "debugFlag": null,
      "direction": "UP",
      "neighbors": [
        "neighbor-0",
        "neighbor-1",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-1": {
      "_sourceOffset": 158,
      "debugFlag": null,
      "direction": "UP",
      "neighbors": [
        "neighbor-2",
        "neighbor-3",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-2": {
      "_sourceOffset": 129,
      "debugFlag": null,
      "direction": "DOWN",
      "neighbors": [
        "neighbor-0",
        "neighbor-1",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-3": {
      "_sourceOffset": 158,
      "debugFlag": null,
      "direction": "DOWN",
      "neighbors": [
        "neighbor-2",
        "neighbor-4",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-4": {
      "_sourceOffset": 129,
      "debugFlag": null,
      "direction": "LEFT",
      "neighbors": [
        "neighbor-0",
        "neighbor-1",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-5": {
      "_sourceOffset": 158,
      "debugFlag": null,
      "direction": "LEFT",
      "neighbors": [
        "neighbor-2",
        "neighbor-5",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-6": {
      "_sourceOffset": 129,
      "debugFlag": null,
      "direction": "RIGHT",
      "neighbors": [
        "neighbor-0",
        "neighbor-1",
      ],
      "type": "BRACKET_SIMPLE",
    },
    "bracket-7": {
      "_sourceOffset": 158,
      "debugFlag": null,
      "direction": "RIGHT",
      "neighbors": [
        "neighbor-2",
        "neighbor-6",
      ],
      "type": "BRACKET_SIMPLE",
    },
  },
  "collisionLayers": {
    "collision-0": {
      "_sourceOffset": 95,
    },
    "collision-1": {
      "_sourceOffset": 106,
    },
    "collision-2": {
      "_sourceOffset": 0,
    },
  },
  "colors": {
    "#000000": "#000000",
    "#f7e26b": "#f7e26b",
  },
  "commands": {},
  "levels": [
    {
      "_sourceOffset": 209,
      "message": "hello",
      "type": "LEVEL_MESSAGE",
    },
    {
      "_sourceOffset": 224,
      "cells": [
        [
          "tile-1",
          "tile-1",
          "tile-0",
          "tile-1",
          "tile-1",
        ],
      ],
      "type": "LEVEL_MAP",
    },
  ],
  "metadata": {
    "againInterval": null,
    "author": null,
    "backgroundColor": null,
    "colorPalette": null,
    "flickscreen": null,
    "homepage": null,
    "keyRepeatInterval": null,
    "noAction": false,
    "noRepeatAction": false,
    "noRestart": false,
    "noUndo": false,
    "realtimeInterval": null,
    "requirePlayerMovement": false,
    "runRulesOnLevelStart": null,
    "textColor": null,
    "throttleMovement": false,
    "verboseLogging": false,
    "youtube": null,
    "zoomscreen": null,
  },
  "neighbors": {
    "neighbor-0": {
      "_sourceOffset": 130,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-0",
      ],
    },
    "neighbor-1": {
      "_sourceOffset": 142,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-1",
      ],
    },
    "neighbor-2": {
      "_sourceOffset": 160,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-2",
      ],
    },
    "neighbor-3": {
      "_sourceOffset": 176,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-3",
      ],
    },
    "neighbor-4": {
      "_sourceOffset": 176,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-4",
      ],
    },
    "neighbor-5": {
      "_sourceOffset": 176,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-5",
      ],
    },
    "neighbor-6": {
      "_sourceOffset": 176,
      "debugFlag": null,
      "tileWithModifiers": [
        "twm-6",
      ],
    },
  },
  "ruleDefinitions": {
    "rule-0": {
      "_sourceOffset": 129,
      "actions": [
        "bracket-1",
      ],
      "commands": [],
      "conditions": [
        "bracket-0",
      ],
      "debugFlag": undefined,
      "directions": [],
      "isLate": false,
      "isRandom": null,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
    "rule-1": {
      "_sourceOffset": 129,
      "actions": [
        "bracket-3",
      ],
      "commands": [],
      "conditions": [
        "bracket-2",
      ],
      "debugFlag": undefined,
      "directions": [],
      "isLate": false,
      "isRandom": null,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
    "rule-2": {
      "_sourceOffset": 129,
      "actions": [
        "bracket-5",
      ],
      "commands": [],
      "conditions": [
        "bracket-4",
      ],
      "debugFlag": undefined,
      "directions": [],
      "isLate": false,
      "isRandom": null,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
    "rule-3": {
      "_sourceOffset": 129,
      "actions": [
        "bracket-7",
      ],
      "commands": [],
      "conditions": [
        "bracket-6",
      ],
      "debugFlag": undefined,
      "directions": [],
      "isLate": false,
      "isRandom": null,
      "isRigid": false,
      "type": "RULE_SIMPLE",
    },
    "rule-4": {
      "_sourceOffset": 129,
      "debugFlag": null,
      "isRandom": false,
      "rules": [
        "rule-0",
        "rule-1",
        "rule-2",
        "rule-3",
      ],
      "type": "RULE_GROUP",
    },
  },
  "rules": [
    "rule-4",
  ],
  "sounds": {},
  "sprites": {
    "sprite-0": {
      "_sourceOffset": 33,
      "collisionLayer": "collision-0",
      "name": "background",
      "pixels": [
        [
          "#000000",
        ],
      ],
    },
    "sprite-1": {
      "_sourceOffset": 53,
      "collisionLayer": "collision-1",
      "name": "player",
      "pixels": [
        [
          "#f7e26b",
        ],
      ],
    },
  },
  "tiles": {
    "tile-0": {
      "_sourceOffset": 53,
      "collisionLayer": "collision-1",
      "name": "player",
      "sprite": "sprite-1",
      "type": "SPRITE",
    },
    "tile-1": {
      "_sourceOffset": 33,
      "collisionLayer": "collision-0",
      "name": "background",
      "sprite": "sprite-0",
      "type": "SPRITE",
    },
  },
  "tilesWithModifiers": {
    "twm-0": {
      "_sourceOffset": 131,
      "debugFlag": undefined,
      "direction": null,
      "isNegated": true,
      "isRandom": false,
      "tile": "tile-0",
    },
    "twm-1": {
      "_sourceOffset": 143,
      "debugFlag": undefined,
      "direction": null,
      "isNegated": false,
      "isRandom": false,
      "tile": "tile-1",
    },
    "twm-2": {
      "_sourceOffset": 161,
      "debugFlag": undefined,
      "direction": null,
      "isNegated": false,
      "isRandom": true,
      "tile": "tile-0",
    },
    "twm-3": {
      "_sourceOffset": 177,
      "debugFlag": undefined,
      "direction": "UP",
      "isNegated": false,
      "isRandom": false,
      "tile": "tile-1",
    },
    "twm-4": {
      "_sourceOffset": 177,
      "debugFlag": undefined,
      "direction": "DOWN",
      "isNegated": false,
      "isRandom": false,
      "tile": "tile-1",
    },
    "twm-5": {
      "_sourceOffset": 177,
      "debugFlag": undefined,
      "direction": "LEFT",
      "isNegated": false,
      "isRandom": false,
      "tile": "tile-1",
    },
    "twm-6": {
      "_sourceOffset": 177,
      "debugFlag": undefined,
      "direction": "RIGHT",
      "isNegated": false,
      "isRandom": false,
      "tile": "tile-1",
    },
  },
  "title": "Test Game",
  "version": 1,
  "winConditions": [],
}
`;

exports[`serializer parses an empty game 1`] = `
{
  "brackets": {},
  "collisionLayers": {
    "collision-0": {
      "_sourceOffset": 0,
    },
  },
  "colors": {},
  "commands": {},
  "levels": [],
  "metadata": {
    "againInterval": null,
    "author": null,
    "backgroundColor": null,
    "colorPalette": null,
    "flickscreen": null,
    "homepage": null,
    "keyRepeatInterval": null,
    "noAction": false,
    "noRepeatAction": false,
    "noRestart": false,
    "noUndo": false,
    "realtimeInterval": null,
    "requirePlayerMovement": false,
    "runRulesOnLevelStart": null,
    "textColor": null,
    "throttleMovement": false,
    "verboseLogging": false,
    "youtube": null,
    "zoomscreen": null,
  },
  "neighbors": {},
  "ruleDefinitions": {},
  "rules": [],
  "sounds": {},
  "sprites": {},
  "tiles": {},
  "tilesWithModifiers": {},
  "title": "Test Game",
  "version": 1,
  "winConditions": [],
}
`;
